# lonespec-splitter

./: .dropboxignore  .gitignore  CHANGELOG.md  GMAIL_SETUP.md  README.md  ROADMAP.md  SPEC.md  gmail_config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/acrobat/: Splitta lonespec.sequ
src/lonespec_splitter/: __init__.py  __main__.py  filename.py  gmail_config.py  gmail_draft.py  log.py  ocr.py  parser.py
tests/: test_filename.py  test_gmail_draft.py  test_integration.py  test_integration_gmail.py  test_parser.py
tests/fixtures/: generate_fixtures.py
tests/output_hogia/: _split_log.txt
tests/output_okant/: _split_log.txt
tests/output_visma/: _split_log.txt
