[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lonespec-splitter"
version = "0.2.0"
description = "Splitta samlad lönespec-PDF till en fil per person, med automatisk namnsättning och Gmail-drafting."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Joel" }]
requires-python = ">=3.11"
keywords = ["pdf", "split", "payroll", "lonespec", "acrobat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Office/Business",
]
dependencies = [
  "pypdf>=4.3.0",
  "pdfplumber>=0.11.0",
  "python-dateutil>=2.9.0",
  "google-auth>=2.27.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.100.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17.0", "pillow>=10.0"]
dev = ["pytest>=8.0", "reportlab>=4.0", "ruff>=0.5"]

[project.scripts]
lonespec-splitter = "lonespec_splitter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
